<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.myxh.myapplication.MainActivity">

    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_confirm"
        android:orderInCategory="100"
        android:title="@string/add_content"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete"
        android:orderInCategory="100"
        android:title="@string/action_delete"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share"
        android:orderInCategory="100"
        android:title="@string/action_share"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_add_alarm"
        android:icon="@drawable/ic_add_alarm"
        android:orderInCategory="100"
        android:title="@string/action_add_alarm"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_text_size"
        android:icon="@drawable/ic_text_size"
        android:orderInCategory="100"
        android:title="@string/action_text_size"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_box"
        android:icon="@drawable/ic_box"
        android:orderInCategory="100"
        android:title="@string/action_box"
        app:showAsAction="never" />
</menu>